Switching to Springdoc OpenAPI

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<java.version>1.8</java.version>
 		<spring-boot-admin.version>2.3.0</spring-boot-admin.version>
 		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+		<keycloak.version>12.0.1</keycloak.version>
+		<springdoc.version>1.5.10</springdoc.version>
 		<geomesa.version>3.1.0</geomesa.version>
 		<scala.abi.version>2.11</scala.abi.version>
 		<scala.version>2.11.7</scala.version>
@@ -140,6 +142,13 @@
 			<version>${zookeeper.version}</version>
 		</dependency>
 
+		<!-- Swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
+
 		<!-- The Webjars -->
 		<dependency>
 			<groupId>org.webjars</groupId>
@@ -205,7 +214,7 @@
 			<dependency>
 				<groupId>org.keycloak.bom</groupId>
 				<artifactId>keycloak-adapter-bom</artifactId>
-				<version>11.0.2</version>
+				<version>${keycloak.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
