Moving the configuration to bootstrap

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,2 +1,4 @@
-spring.application.name=msg-broker
 server.port=8763
+spring.application.name=msg-broker
+eureka.instance.preferIpAddress=false
+spring.cloud.inetutils.preferredNetworks=10.0.1
