--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,12 @@
 				<scope>import</scope>
 			</dependency>
 
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-properties-migrator</artifactId>
+				<scope>compile</scope>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
