--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.1</spring-cloud.version>
-		<springdoc.version>1.6.7</springdoc.version>
+		<springdoc.version>2.0.2</springdoc.version>
 		<bootstrap.version>5.1.3</bootstrap.version>
 		<jquery.version>3.6.0</jquery.version>
 		<fa.version>6.1.0</fa.version>
@@ -154,7 +154,7 @@
 		<!-- Swagger -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>${springdoc.version}</version>
 		</dependency>
 
