--- a/docker/conf/application.properties
+++ b/docker/conf/application.properties
@@ -1,5 +1,5 @@
 # Configuration Variables
-service.variable.hostname=<message-broker.hostname>
+service.variable.hostname=<service.hostname>
 service.variable.eureka.server.name=<eureka.server.name>
 service.variable.eureka.server.port=<eureka.server.port>
 service.variable.keycloak.server.name=<keycloak.server.name>
