Removing the application bootstrapping operation

--- a/docker/conf/application.properties
+++ b/docker/conf/application.properties
@@ -9,6 +9,14 @@ service.variable.kafka.server.name=<kafka.server.name>
 service.variable.kafka.server.broker.port=<kafka.server.port>
 service.variable.kafka.server.zookeeper.port=<zookeeper.server.port>
 
+# Service properties
+server.port=8763
+spring.application.name=msg-broker
+spring.application.version=0.0.3
+
+# Disable the cloud config
+spring.cloud.config.enabled=false
+
 # Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://${service.variable.eureka.server.name}:${service.variable.eureka.server.port}/eureka/
 eureka.client.registryFetchIntervalSeconds=5
