--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=msg-broker
 spring.application.version=0.0.3
 
 # The Spring Cloud Discovery Config
-spring.cloud.config.uri=${ENAV_CLOUD_CONFIG_URI}
+spring.config.import=optional:configserver:${ENAV_CLOUD_CONFIG_URI}
 spring.cloud.config.username=${ENAV_CLOUD_CONFIG_USERNAME}
 spring.cloud.config.password=${ENAV_CLOUD_CONFIG_PASSWORD}
 spring.cloud.config.label=${ENAV_CLOUD_CONFIG_BRANCH}
