--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,8 @@
+# Service properties
+server.port=8763
+spring.application.name=msg-broker
+spring.cloud.config.enabled=false
+
 # Disable Security while testing
 app.security.basic.enabled = false
 keycloak.enabled=false
